# kuba-tsdb

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CACHE_REVIEW.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  TECHNICAL.md  application.toml  clippy.toml  deny.toml  docker-compose.yml  metrics_collector.sh  rustfmt.toml
.cargo/: config.toml
.github/: AGENTS.md  CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  customcheck.yml  pr-review.yml  release.yml  rust.yml  security.yml  snyk-code.yml
benches/: ahpac_benchmark.rs  ans_benchmark.rs  compression.rs  ingestion.rs  mmap_performance.rs  parallel_benchmark.rs  simd_benchmark.rs
data/tsdb/series_7386918352075818728/: chunk_c137e901-58b2-4b67-8cf2-62551a3b2aad.gor
monitoring/: prometheus.yml
scripts/: batch_metrics.py  security-check.sh
src/: config.rs  error.rs  index.rs  lib.rs  metrics.rs  security.rs  types.rs
src/aggregation/: cardinality.rs  data_model.rs  functions.rs  mod.rs  query.rs  space_time.rs
src/aggregation/index/: bitmap.rs  mod.rs  tag_resolver.rs
src/aggregation/metadata/: mod.rs  string_intern.rs
src/ahpac/: frame.rs  mod.rs  neural_predictor.rs  profile.rs  selector.rs
src/ahpac/codecs/: alp.rs  chimp.rs  delta_lz4.rs  kuba.rs  mod.rs
src/cache/: invalidation.rs  local.rs  query.rs  storage.rs  unified.rs
src/compression/: ahpac.rs  algorithm_selector.rs  ans.rs  bit_stream.rs  gorilla.rs  kuba.rs  metrics.rs  mod.rs  parallel.rs  simd.rs
src/engine/: builder.rs  mod.rs  stubs.rs  traits.rs
src/ingestion/: backpressure.rs  batch.rs  buffer.rs  metrics.rs  mod.rs  writer.rs
src/ingestion/buffer/: config.rs  mod.rs  series.rs
src/ingestion/network/: connection.rs  error.rs  http.rs  mod.rs  rate_limit.rs  tcp.rs  tls.rs  udp.rs
src/ingestion/observability/: health.rs
src/ingestion/protocol/: detect.rs  error.rs  json.rs  line.rs  mod.rs  protobuf.rs
src/ingestion/routing/: affinity.rs  consistent.rs  mod.rs
src/ingestion/schema/: bloom.rs  mod.rs  registry.rs  sanitize.rs  validation.rs
src/ingestion/spill/: config.rs  error.rs  file.rs  manager.rs  mod.rs  recovery.rs
src/ingestion/wal/: config.rs  error.rs  mod.rs  record.rs  recovery.rs  segment.rs  writer.rs
src/query/: ast.rs  cache.rs  chunk_index.rs  error.rs  executor.rs  integration.rs  mod.rs  planner.rs  result.rs  subscription.rs
src/query/operators/: aggregation.rs  downsample.rs  filter.rs  limit.rs  mod.rs  parallel.rs  scan.rs  sort.rs  storage_scan.rs
src/query/parser/: mod.rs  promql.rs  sql.rs
src/redis/: buffer.rs  connection.rs  failover.rs  index.rs  metrics.rs  mod.rs  pubsub.rs  query.rs  scripts.rs  series.rs  util.rs
src/redis/index/: cache.rs  metadata.rs  mod.rs
src/services/: compactor.rs  framework.rs  mod.rs
src/storage/: active_chunk.rs  adaptive_concurrency.rs  background_sealer.rs  cache.rs  chunk.rs  chunk_coalescing.rs  compressor.rs  directory.rs  integrity.rs  local_disk.rs  mmap.rs  mod.rs  parallel_sealing.rs  priority_sealing.rs  reader.rs  tiered.rs  wal.rs  writer.rs
supply-chain/: audits.toml  config.toml
tests/: active_chunk_edge_cases.rs  adaptive_concurrency_edge_cases.rs  adaptive_concurrency_integration.rs  aggregation_integration.rs  ahpac_success_criteria.rs  bitstream_issue_investigation.rs  chunk_coalescing_edge_cases.rs  chunk_coalescing_integration.rs  code_review_fixes.rs  critical_issues_tests.rs  dead_code_integration.rs  directory_edge_cases.rs  fuzz_tests.rs  gorilla_bug_investigation.rs  performance_benchmarks.rs  priority_sealing_edge_cases.rs  priority_sealing_integration.rs  security_vulnerabilities_tests.rs  server_integration.rs  silent_failures_logging_tests.rs  space_time_completion_tests.rs  storage_bugs_reproduction.rs  storage_deep_validation.rs  storage_lifecycle_tests.rs  stress_tests.rs  system_integration.rs
(+1 files in other folders)
