[package]
name = "gorilla-tsdb"
version = "0.1.0"
edition = "2021"
authors = ["Time-Series DB Team"]
description = "High-performance time-series database with Gorilla compression"
license = "MIT"

[lib]
name = "gorilla_tsdb"
path = "src/lib.rs"

[[bin]]
name = "tsdb-server"
path = "src/bin/server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures
bytes = { version = "1.7", features = ["serde"] }
byteorder = "1.5"
dashmap = "6.0"

# Storage
memmap2 = "0.9"
snap = "1.0"

# Index
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Error handling and logging
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Time handling
chrono = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
crc = "3.0"
rand = "0.9.2"

# System
libc = "0.2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.0"
tempfile = "3.0"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "mmap_performance"
harness = false
