[package]
name = "gorilla-tsdb"
version = "0.1.0"
edition = "2021"
authors = ["Victor Oseghale"]
description = "High-performance time-series database with Gorilla compression"
license = "MIT"

[lib]
name = "gorilla_tsdb"
path = "src/lib.rs"

[[bin]]
name = "tsdb-server"
path = "src/bin/server.rs"

[features]
default = []
# Enable TLS support for Redis connections (uses rustls)
redis-tls = ["redis/tokio-rustls-comp"]
# Enable SIMD-accelerated filtering for large batches (64+ elements)
simd = []

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Data structures
bytes = { version = "1.7", features = ["serde"] }
byteorder = "1.5"
dashmap = "6.0"
lru = "0.16.2"

# Storage
memmap2 = "0.9"
snap = "1.0"

# Index
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Error handling and logging
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Time handling
chrono = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
crc = "3.0"
rand = "0.9.2"
url = "2.5"

# System
libc = "0.2"
num_cpus = "1.16"

# Metrics and monitoring
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = "1.4"

# Performance
rayon = "1.8"

# Security
governor = "0.10.2"
regex = "1.10"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Network utilities
socket2 = { version = "0.6.0", features = ["all"] }

# HTTP server (for metrics/health endpoints)
axum = { version = "0.8.6", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Protocol parsing
smallvec = { version = "1.13", features = ["serde"] }
prost = "0.14.1"

# Compression
lz4_flex = "0.12.0"

# Checksums
crc32fast = "1.4"

# Percentile computation (streaming t-digest algorithm)
tdigest = "0.2"

# Configuration
toml = "0.9.8"

# Query parsing
nom = "8.0"

# Dependencues
protobuf = "3.7.2"
base64 = "0.22.1"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.0"
tempfile = "3.0"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "mmap_performance"
harness = false
